--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
+<!DOCTYPE html>
+
 <html>
   <head>
-    <title>Exercício 1</title>
+    <title>Exerc2 - Inserindo efeitos</title>
+  
   </head>
   <body>
-    <p>Esta é a "primeira" vez que digito um documento em HTML para criar uma página WEB.</p>
-    <p>Nome: Maria Clara<br>User:MariaClara-gs<br>Aprendendo:HTML</p>
-    <p>Very nice :D</p>
+     <style> 
+     body{
+         background-color:lightsteelblue
+
+     } 
+     </style>
+    <p align="center"><font size="6">Esta é a "primeira" vez que digito um documento em HTML para criar uma página WEB.</font></p>
+    <p align="center"><font color="#DC143C", size="5"><b>Nome:<b> </font><font size="5"><i>Maria Clara</i>
+    </p>  
+      <p align="center"><font color="#DC143C"><b>User:</b></font><i><u>MariaClara-gs</u></i></p>
+      <p align="center"><font color="#DC143C"><b>Aprendendo:</b></font><i>HTML</i></p>
+    <hr>
+    <p align="center"><font color="#00FA9A">Very nice :D</font></p>
+    </font>
+    <hr>
+
   </body>
 
 </html>
