--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p align="center"><font size="6">Esta é a "primeira" vez que digito um documento em HTML para criar uma página WEB.</font></p>
     <p align="center"><font color="#DC143C", size="5"><b>Nome:<b> </font><font size="5"><i>Maria Clara</i>
     </p>  
-      <p align="center"><font color="#DC143C"><b>User:</b></font><i><u>MariaClara-gs</u></i></p>
+      <p align="center"><font color="#DC143C"><b>User:</b></font><a href="https://github.com/MariaClara-gs" target="blank"><i><u>MariaClara-gs</u></i></a></p>
       <p align="center"><font color="#DC143C"><b>Aprendendo:</b></font><i>HTML</i></p>
     <hr>
     <p align="center"><font color="#00FA9A">Very nice :D</font></p>
