--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
      } 
      </style>
-    <p align="center"><font size="6">Esta é a "primeira" vez que digito um documento em HTML para criar uma página WEB.</font></p>
+    <p align="center"><font size="6">Inseri alguns efeitos utilizando HTML.</font></p>
     <p align="center"><font color="#DC143C", size="5"><b>Nome:<b> </font><font size="5"><i>Maria Clara</i>
     </p>  
       <p align="center"><font color="#DC143C"><b>User:</b></font><a href="https://github.com/MariaClara-gs" target="blank"><i><u>MariaClara-gs</u></i></a></p>
